--- a/src/components/bill/bill.scss
+++ b/src/components/bill/bill.scss
@@ -1,3 +1,50 @@
 bill {
     background-color: #fff;
+    .bill{
+        text-align: center;
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        .header{
+            width: 80%;
+            h3{
+                font-size: 1.5em;
+                padding: 0;
+                margin-bottom: 0;
+            }
+            h4{
+                font-size: 1.2em;
+                padding: 0;
+                margin-bottom: 0;
+                margin-top: 0;
+            }
+            h5{
+                font-size: 1em;
+                padding: 0;
+                margin-bottom: 0;
+                margin-top: 0;
+            }
+            border-bottom: solid 1px rgba(0, 0, 0, .5);
+        }
+
+        .body{
+            padding-top: 20px;
+            table {
+                border-collapse: collapse;
+                width: 100%;
+                border: 1px solid rgba(0,0,0,.56);
+                tr {
+                    td {
+                        border-collapse: collapse;
+                        width: 100%;
+                        border: 1px solid rgba(0,0,0,.56);
+                        padding: 7px;
+                        text-transform: capitalize;
+                    }
+                }
+            }
+        }
+    }
 }
