--- a/src/pages/orders/orders.scss
+++ b/src/pages/orders/orders.scss
@@ -1,3 +1,39 @@
 page-orders {
+    ion-card{
+        overflow: visible;
+        position: relative;
+        ion-card-header {
+            h1 {
+                font-size: 1em !important;
+                text-align: center;
+                font-weight: 1000;
+                text-transform: capitalize;
+            }
+            span {
+                position: absolute;
+                top: -10px;
+                right: -10px;
+                z-index: 1000;
+                ion-icon {
+                    font-size: 40px;
+                }
+            }
+        }
 
+        ion-card-content {
+            ul {
+                list-style: none;
+                text-transform: capitalize;
+                padding: 0;
+                li {
+                    p {
+                        padding-left: 20px; 
+                    }
+                    border-bottom: solid 1px rgba(0 , 0, 0, .5);
+                    padding-top: 15px;
+                    padding-left: 15px;
+                }
+            }
+        }
+    }
 }
